crates/toml_edit/tests/fixtures/invalid/string/multiline-bad-escape-1.stderr
TOML parse error at line 1, column 11
  |
1 | k = """t\a"""
  |           ^
Invalid escape sequence
Expected `b`, `f`, `n`, `r`, `t`, `u`, `U`, `\`, `"`
